--- a/src/db/db.properties
+++ b/src/db/db.properties
@@ -1,6 +1,6 @@
 allowPublicKeyRetrieval=true
 name=iok
 password=P@2rinCipio
-dburl=jdbc:mysql://127.0.0.1:3306/coursejdbc
+dburl=jdbc:mysql://localhost:3306/coursejdbc
 useSSL=false
 
