--- a/src/db/db.properties
+++ b/src/db/db.properties
@@ -1,6 +1,5 @@
-allowPublicKeyRetrieval=true
-name=iok
-password=P@2rinCipio
+user=root
+password=root
 dburl=jdbc:mysql://localhost:3306/coursejdbc
 useSSL=false
 
